Simple Deprecation solved